--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.2.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "promise-mysql": "^5.2.0",
