--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "promise-mysql": "^5.2.0",
